# thameswaterapi

./: README.md  pyproject.toml  test_data_retrieval.py  test_live.py  thameswaterclient.py
.github/workflows/: ci.yml
thameswaterapi/: __init__.py  __main__.py
thameswaterclient/: __main__.py
