[tool.poetry]
name = "thameswaterapi"
version = "0.2.0"
description = "A Python client for retrieving hourly meter data from Thames Water"
authors = ["Ayrton Bourn <ayrtonbourn@outlook.com>"]
maintainers = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "thameswaterapi"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.7.0"
python-dotenv = "^1.0.1"

[project.urls]
Homepage = "https://github.com/jelmer/thameswaterapi"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
