[project]
name = "thameswaterapi"
version = "0.3.1"
description = "A Python client for retrieving hourly meter data from Thames Water"
authors = [
    {name = "Ayrton Bourn", email = "ayrtonbourn@outlook.com"},
]
maintainers = [
    {name = "Jelmer Vernooĳ", email = "jelmer@jelmer.uk"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/jelmer/thameswaterapi"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.7.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
